all top margins should be aligned, back button fixed on custom activities

--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -12,7 +12,7 @@ $dangerRed: #891515;
     height: 400px;
     position: relative;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 75px;
     background-color: white;
     border: 1px solid #f5f5f5;
     border-top-right-radius: 5px;
