--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -78,7 +78,7 @@
 
 .settingsModule {
     position: relative;
-    top: 100px;   
+    top: 75px;   
     width: 350px;
     height: 375px;
     border: 1px solid #dedede;
@@ -168,7 +168,7 @@ a:hover {
 /*Interests in settings page*/
 .settingInterests { 
     position: relative;
-    top: 100px;   
+    top: 75px;   
     width: 350px;
     height: 375px;
     border: 1px solid #dedede;
@@ -220,7 +220,7 @@ a:hover {
 	width: 100%;
 	text-align: center;
 	height: 45%;
-	margin-top: 30px;
+	margin-top: 10px;
 	border-collapse: separate; 
 	border-spacing: .5em;
 	overflow: scroll;
